--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
         <div class="info">
             <p>Hi, a website will come one day but for now if you need to get in touch:</p>
-            <ul><li>email <a href="mailto:hello@whoooop.co.uk"><strong>hello@whoooop.co.uk</strong></a></li><li>phone <strong>0161 850 2015</strong></li></ul>
+            <ul><li><a href="https://uk.linkedin.com/in/johncashmore">LinkedIn</a></li><li>email <a href="mailto:hello@whoooop.co.uk"><strong>hello@whoooop.co.uk</strong></a></li><li>phone <strong>0161 850 2015</strong></li></ul>
         </div>
     </body>
 
