--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     </head>
     <body>
 
-        <img src="img/site-logo.png" alt="Whoooop" class="logo" />
+        <h1><img src="img/site-logo.png" alt="Whoooop Ltd." class="logo" /></h1>
 
         <div class="info">
             <p>Hi, if you need to get in touch:</p>
